# Chat-Sistos

./: .gitignore  CMakeLists.txt  README.md  configure.sh
client/src/: client.cpp
pruebas/client/: CMakeLists.txt
pruebas/client/src/: chat.pb.cc  chat.pb.h  client.cpp  message.cpp  message.h
pruebas/server/: CMakeLists.txt  run.sh
pruebas/server/src/: chat.proto  server.cpp
server/: CMakeLists.txt
server/src/: server.cpp
src/: client.cpp  server.cpp
src/protocol/: chat.pb.cc  chat.pb.h  message.cpp  message.h
tools/: make_proto.sh
